# anchor-fundraiser

./: .gitignore  Anchor.toml
programs/fundraiser/: Cargo.toml
programs/fundraiser/src/: error.rs  lib.rs
programs/fundraiser/src/instructions/: check.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
programs/fundraiser/src/state/: contributor.rs  fundraiser.rs
