[package]
name = "fundraiser"
version = "0.1.0"
description = "Fundraiser program (Pinocchio)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fundraiser"

[features]
default = ["perf"]
perf = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.11", features = ["cpi"] }
pinocchio-token = "0.6"
pinocchio-system = "0.6"
pinocchio-associated-token-account = "0.4"
